--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "photo-website",
+  "description": "A webiste to allow visitors to upload and download photos",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/pmaidens/photo-website",
   "license": "MIT",
   "private": true,
   "dependencies": {
