--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "html5-boilerplate": "~4.3.0"
+    "html5-boilerplate": "~4.3.0",
+    "ng-file-upload": "~2.0.5",
+    "ng-file-upload-shim": "~2.0.5"
   }
 }
