--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "html5-boilerplate": "~4.3.0",
-    "ng-file-upload": "~2.0.5",
-    "ng-file-upload-shim": "~2.0.5"
+    "ng-file-upload": "~2.0.5"
   }
 }
